module/core/diagnostics_tools/tests/inc/snipet/cta_type_same_align_fail.stderr
error[E0308]: mismatched types
 --> $WORKSPACE/module/core/diagnostics_tools/tests/inc/snipet/cta_type_same_align_fail.rs
  |
  |   cta_type_same_align!( Int, i16 );
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |   |
  |   expected an array with a fixed size of 128 elements, found one with 2 elements
  |   expected due to this
  |
  = note: this error originates in the macro `cta_type_same_align` (in Nightly builds, run with -Z macro-backtrace for more info)
