module/core/diagnostics_tools/tests/inc/snipet/cta_type_same_align_fail.rs
use test_tools::diagnostics_tools::*;

fn main()
{
  #[ repr( align( 128 ) ) ]
  struct Int( i16 );
  cta_type_same_align!( Int, i16 );
}
